src/objects/smagicschedule__SMS_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>smagicschedule__Condition__c</fullName>
        <label>Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicschedule__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>smagicschedule__Failure_Reason__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicschedule__Job_ID__c</fullName>
        <label>Job ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicschedule__Name_Field__c</fullName>
        <label>Name Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicschedule__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicschedule__Optout_Field__c</fullName>
        <label>Optout Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicschedule__Phone_Field__c</fullName>
        <label>Phone Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicschedule__Record_Ids__c</fullName>
        <label>Record Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicschedule__SMS_Text__c</fullName>
        <label>SMS Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicschedule__Schedule_JobId__c</fullName>
        <label>Schedule JobId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicschedule__Schedule_Name__c</fullName>
        <label>Schedule Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicschedule__Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>smagicschedule__SenderId__c</fullName>
        <label>Sender Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicschedule__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicschedule__isOptout__c</fullName>
        <label>Send To Optout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SMS Schedule</label>
    <listViews>
        <fullName>smagicschedule__All</fullName>
        <columns>NAME</columns>
        <columns>smagicschedule__Schedule_Name__c</columns>
        <columns>smagicschedule__Job_ID__c</columns>
        <columns>smagicschedule__Object__c</columns>
        <columns>smagicschedule__SMS_Text__c</columns>
        <columns>smagicschedule__Record_Ids__c</columns>
        <columns>smagicschedule__Scheduled_Date__c</columns>
        <columns>smagicschedule__Status__c</columns>
        <columns>smagicschedule__SenderId__c</columns>
        <columns>smagicschedule__isOptout__c</columns>
        <columns>smagicschedule__Failure_Reason__c</columns>
        <columns>smagicschedule__Name_Field__c</columns>
        <columns>smagicschedule__Optout_Field__c</columns>
        <columns>smagicschedule__Phone_Field__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>smagicschedule__Failed</fullName>
        <columns>NAME</columns>
        <columns>smagicschedule__Schedule_Name__c</columns>
        <columns>smagicschedule__Job_ID__c</columns>
        <columns>smagicschedule__Object__c</columns>
        <columns>smagicschedule__SMS_Text__c</columns>
        <columns>smagicschedule__Record_Ids__c</columns>
        <columns>smagicschedule__Scheduled_Date__c</columns>
        <columns>smagicschedule__Status__c</columns>
        <columns>smagicschedule__SenderId__c</columns>
        <columns>smagicschedule__isOptout__c</columns>
        <columns>smagicschedule__Failure_Reason__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smagicschedule__Status__c</field>
            <operation>equals</operation>
            <value>Failure</value>
        </filters>
        <label>Failed</label>
    </listViews>
    <listViews>
        <fullName>smagicschedule__Scheduled</fullName>
        <columns>NAME</columns>
        <columns>smagicschedule__Schedule_Name__c</columns>
        <columns>smagicschedule__Job_ID__c</columns>
        <columns>smagicschedule__Object__c</columns>
        <columns>smagicschedule__SMS_Text__c</columns>
        <columns>smagicschedule__Record_Ids__c</columns>
        <columns>smagicschedule__Scheduled_Date__c</columns>
        <columns>smagicschedule__Status__c</columns>
        <columns>smagicschedule__SenderId__c</columns>
        <columns>smagicschedule__isOptout__c</columns>
        <columns>smagicschedule__Failure_Reason__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smagicschedule__Status__c</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </filters>
        <label>Scheduled</label>
    </listViews>
    <listViews>
        <fullName>smagicschedule__Success</fullName>
        <columns>NAME</columns>
        <columns>smagicschedule__Schedule_Name__c</columns>
        <columns>smagicschedule__Job_ID__c</columns>
        <columns>smagicschedule__Object__c</columns>
        <columns>smagicschedule__SMS_Text__c</columns>
        <columns>smagicschedule__Record_Ids__c</columns>
        <columns>smagicschedule__Scheduled_Date__c</columns>
        <columns>smagicschedule__Status__c</columns>
        <columns>smagicschedule__SenderId__c</columns>
        <columns>smagicschedule__isOptout__c</columns>
        <columns>smagicschedule__Failure_Reason__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smagicschedule__Status__c</field>
            <operation>equals</operation>
            <value>Success</value>
        </filters>
        <label>Success</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>SMS Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Scheduled</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>